--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -10,11 +10,11 @@
         Real Gamers Speak<br>Podcast and Blog
     </header>
     <nav>
-        <a href="D:\School 2025\Code\Post_Page_Curry.html">Episodes</a>
-        <a href="D:\School 2025\Code\Pictures_Curry.html">Pictures</a>
-        <a href="D:\School 2025\Code\Post_Page_Curry.html">Clips</a>
-        <a href="D:\School 2025\Code\Host_Page_Curry.html">About the Host</a>
-        <a href="D:\School 2025\Code\Poll.html">Poll</a>
+        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Pictures_Curry.html">Pictures</a>
+        <a href="Post_Page_Curry.html">Clips</a>
+        <a href="Host_Page_Curry.html">About the Host</a>
+        <a href="Poll.html">Poll</a>
     </nav>
     <div class="content">
         <div class="latest-episode">
