--- a/Pictures_Curry.html
+++ b/Pictures_Curry.html
@@ -12,11 +12,11 @@
 </header>
 
 <div class="nav">
-    <a href="D:\School 2025\Code\Post_Page_Curry.html">Episodes</a>
-    <a href="D:\School 2025\Code\Pictures_Curry.html">Pictures</a>
-    <a href="D:\School 2025\Code\Post_Page_Curry.html">Clips</a>
-    <a href="D:\School 2025\Code\Host_Page_Curry.html">About the Host</a>
-    <a href="D:\School 2025\Code\Poll.html">Poll</a>
+        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Pictures_Curry.html">Pictures</a>
+        <a href="Post_Page_Curry.html">Clips</a>
+        <a href="Host_Page_Curry.html">About the Host</a>
+        <a href="Poll.html">Poll</a>
 </div>
 
 <div class="carousel">
