--- a/Pictures_Curry.html
+++ b/Pictures_Curry.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="image-section">
-    <img id="mainImage" src="D:\School 2025\Code\Images\we.jpg" alt="Gaming Night">
+    <img id="mainImage" src="Images/we.jpg" alt="Gaming Night">
     <h2>Nacho and Gaming in the Man Cave</h2>
 </div>
 
