--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="D:\School 2025\Code\Images\logo.png" alt="Real Gamers Speak Logo">
+            <img src="Images/logo.png" alt="Real Gamers Speak Logo">
         </div>
         <div class="video-container" onclick="navigate()">
             <video autoplay muted loop>
-                <source src="D:\School 2025\Code\Videos\videoOutro_1.mp4" type="video/mp4">
+                <source src="Starting Soon1.mp4" type="video/mp4">
             </video>
         </div>
     </div>
