--- a/Host_Page_Curry.html
+++ b/Host_Page_Curry.html
@@ -4,42 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authors</title>
-    <link rel="stylesheet" href="D:\School 2025\Code\author.css">
+    <link rel="stylesheet" href="author.css">
 </head>
 <body>
     <header>
         Real Gamers Speak<br>Podcast and Blog
     </header>
     <nav>
-        <a href="D:\School 2025\Code\Post_Page_Curry.html">Episodes</a>
-        <a href="D:\School 2025\Code\Pictures_Curry.html">Pictures</a>
-        <a href="D:\School 2025\Code\Post_Page_Curry.html">Clips</a>
-        <a href="D:\School 2025\Code\Host_Page_Curry.html">About the Host</a>
-        <a href="D:\School 2025\Code\Poll.html">Poll</a>
+        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Pictures_Curry.html">Pictures</a>
+        <a href="Post_Page_Curry.html">Clips</a>
+        <a href="Host_Page_Curry.html">About the Host</a>
+        <a href="Poll.html">Poll</a>
     </nav>
     <div class="content">
         <h2>About the Host</h2>
         <div class="host-container">
             <div class="host-card">
-                <img src="D:\School 2025\Code\Images\a.png" alt="Kwame Curry">
+                <img src="Images/a.png" alt="Kwame Curry">
                 <h3>Kwame Curry<br><small>Founder & Host</small></h3>
                 <p>Love to cook steak, playing with my daughter and talking about videogames.</p>
                 <p>Email: <a href="mailto:Kwame.Curry@gmail.com">Kwame.Curry@gmail.com</a></p>
             </div>
             <div class="host-card">
-                <img src="D:\School 2025\Code\Images\d.jpeg" alt="Kevin Cash">
+                <img src="Images/d.jpeg" alt="Kevin Cash">
                 <h3>Kevin Cash<br><small>Co-Host</small></h3>
                 <p>Video Game Collector and love to make moderations to retro gaming systems.</p>
                 <p>Email: <a href="mailto:kcamazon31@gmail.com">kcamazon31@gmail.com</a></p>
             </div>
             <div class="host-card">
-                <img src="D:\School 2025\Code\Images\c.png" alt="Anthony Adams">
+                <img src="Images/c.png" alt="Anthony Adams">
                 <h3>Anthony Adams<br><small>Co-Host</small></h3>
                 <p>Family man as well, love shooters. Spend most his days at work or home.</p>
                 <p>Email: <a href="mailto:anthony121090@gmail.com">anthony121090@gmail.com</a></p>
             </div>
             <div class="host-card">
-                <img src="D:\School 2025\Code\Images\b.png" alt="Jordan McNairy">
+                <img src="Images/b.png" alt="Jordan McNairy">
                 <h3>Jordan McNairy<br><small>Co-Host</small></h3>
                 <p>Family man as well, love shooters. A home chief that love to come up with his own dishes.</p>
                 <p>Email: <a href="mailto:igokolji@pxdmail.net">igokolji@pxdmail.net</a></p>
