--- a/Pictures_Curry.html
+++ b/Pictures_Curry.html
@@ -13,11 +13,11 @@
 </header>
 
 <div class="nav">
-    <a href="D:\School 2025\Code\Post_Page_Curry.html">Episodes</a>
-    <a href="D:\School 2025\Code\Pictures_Curry.html">Pictures</a>
-    <a href="D:\School 2025\Code\Post_Page_Curry.html">Clips</a>
-    <a href="D:\School 2025\Code\Host_Page_Curry.html">About the Host</a>
-    <a href="D:\School 2025\Code\Poll.html">Poll</a>
+        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Pictures_Curry.html">Pictures</a>
+        <a href="Post_Page_Curry.html">Clips</a>
+        <a href="Host_Page_Curry.html">About the Host</a>
+        <a href="Poll.html">Poll</a>
 </div>
 
 <div class="carousel">
@@ -27,7 +27,7 @@
 </div>
 
 <div class="image-section">
-    <img id="mainImage" src="D:\School 2025\Code\Images\we.jpg" alt="Gaming Night">
+    <img id="mainImage" src="Images/we.jpg" alt="Gaming Night">
     <h1>Nacho and Gaming in the Man Cave</h1>
 </div>
 
@@ -47,7 +47,7 @@
 </div>
 
 <script>
-    let images = ["SD:\School 2025\Code\Images\we.jpg"];
+    let images = ["Images/we.jpg"];
     let currentIndex = 0;
 
     function prevImage() {
