--- a/Poll.html
+++ b/Poll.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Gamers Speak - Podcast and Blog</title>
-    <link rel="stylesheet" href="D:\School 2025\Code\poll.css">
+    <link rel="stylesheet" href="poll.css">
 </head>
 <body>
     <div class="header">Real Gamers Speak<br>Podcast and Blog</div>
     <div class="nav">
-        <a href="D:\School 2025\Code\Post_Page_Curry.html">Episodes</a>
-        <a href="D:\School 2025\Code\Pictures_Curry.html">Pictures</a>
-        <a href="D:\School 2025\Code\Post_Page_Curry.html">Clips</a>
-        <a href="D:\School 2025\Code\Host_Page_Curry.html">About the Host</a>
-        <a href="D:\School 2025\Code\Poll.html">Poll</a>
+        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Pictures_Curry.html">Pictures</a>
+        <a href="Post_Page_Curry.html">Clips</a>
+        <a href="Host_Page_Curry.html">About the Host</a>
+        <a href="Poll.html">Poll</a>
     </div>
     <div class="container">
         <div class="box">
