--- a/Pictures_Curry.html
+++ b/Pictures_Curry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pictures</title>
-    <link rel="stylesheet" href="D:\School 2025\Code\pictures.css">
+    <link rel="stylesheet" href="pictures.css">
 </head>
 <body>
 
