--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="video-container" onclick="navigate()">
             <video autoplay muted loop>
-                <source src="Starting Soon 1.mp4" type="video/mp4">
+                <source src="Twitch Offline.mp4" type="video/mp4">
             </video>
         </div>
     </div>
