--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <img src="Images/logo.png" alt="Real Gamers Speak Logo">
         </div>
         <div class="video-container" onclick="navigate()">
-            <video autoplay muted loop>
+            <video autoplay loop>
                 <source src="Twitch Offline.mp4" type="video/mp4">
             </video>
+            <div class="click-text">Click Video to Enter Site</div>
         </div>
     </div>
     </div>
