--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     </div>
     </div>
     <script>
+        window.addEventListener('load', function() {
+            let video = document.getElementById('intro-video');
+            video.playbackRate = 2.0; // Set speed to 2x
+        });
         function navigate() {
             window.location.href = "Welcome_Page_html_Curry.html";
         }
