--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="video-container" onclick="navigate()">
             <video id="intro-video" autoplay muted loop>
-                <source src="Twitch Offline.mp4" type="video/mp4">
+                <source src="Starting Soon 1.mp4" type="video/mp4">
             </video>
             <div class="click-text">Click Video to Enter Site</div>
         </div>
