--- a/Poll.html
+++ b/Poll.html
@@ -47,6 +47,17 @@
                 <label><input type="checkbox" name="games" value="Assassin's Creed Shadows" onclick="vote(this)"> Assassin's Creed Shadows <span class="vote-count" id="Assassin's Creed Shadows-count">0</span></label><br>
                 <label><input type="checkbox" name="games" value="Metroid Prime 4" onclick="vote(this)"> Metroid Prime 4 <span class="vote-count" id="Metroid Prime 4-count">0</span></label><br>
             </form>
+            <div class="comment-section">
+                <h3>Comment Section</h3>
+                <div class="input-container">
+                    <input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here">
+                    <button onclick="addComment()">Post</button>
+                </div>
+                <div class="comment-list" id="commentList">
+                    <div class="comment">@iPLAYGAMES: I don’t know what is out there</div>
+                    <div class="comment">@milikud: Hope you all make it big</div>
+                    <div class="comment">@edwardpatrick: Laughter is the best medicine...</div>
+                </div>
         </div>
         <div class="box">
             <h3>Suggestions for Future Episodes</h3>
@@ -66,6 +77,17 @@
                 <input type="checkbox" name="trends" value="AI and gaming innovations"> AI and gaming innovations<br>
                 <input type="checkbox" name="trends" value="Esports and competitive gaming"> Esports and competitive gaming<br>
             </form>
+            <div class="comment-section">
+                <h3>Comment Section</h3>
+                <div class="input-container">
+                    <input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here">
+                    <button onclick="addComment()">Post</button>
+                </div>
+                <div class="comment-list" id="commentList">
+                    <div class="comment">@iPLAYGAMES: I don’t know what is out there</div>
+                    <div class="comment">@milikud: Hope you all make it big</div>
+                    <div class="comment">@edwardpatrick: Laughter is the best medicine...</div>
+                </div>
         </div>
     </div>
     <div class="social-media">
