--- a/Poll.html
+++ b/Poll.html
@@ -24,18 +24,9 @@
                 <label><input type="radio" name="goty" value="No" onclick="vote(this)"> No <span class="vote-count" id="No-count">0</span></label><br>
                 <label><input type="radio" name="goty" value="Indifferent" onclick="vote(this)"> Indifferent <span class="vote-count" id="Indifferent-count">0</span></label><br>
             </form>
-            <div class="comment-section">
-                <h3>Comment Section</h3>
-                <div class="input-container">
-                    <input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here">
-                    <button onclick="addComment()">Post</button>
-                </div>
-                <div class="comment-list" id="commentList">
-                    <div class="comment">@iPLAYGAMES: I don’t know what is out there</div>
-                    <div class="comment">@milikud: Hope you all make it big</div>
-                    <div class="comment">@edwardpatrick: Laughter is the best medicine...</div>
-                </div>
-            </div>
+              <h4>Leave Comment</h4>
+            <textarea class="comment-box"></textarea>
+            <button class="submit-button">Submit</button>
         </div>
         <div class="box">
             <h3>Poll for Next Episode</h3>
@@ -47,17 +38,9 @@
                 <label><input type="checkbox" name="games" value="Assassin's Creed Shadows" onclick="vote(this)"> Assassin's Creed Shadows <span class="vote-count" id="Assassin's Creed Shadows-count">0</span></label><br>
                 <label><input type="checkbox" name="games" value="Metroid Prime 4" onclick="vote(this)"> Metroid Prime 4 <span class="vote-count" id="Metroid Prime 4-count">0</span></label><br>
             </form>
-            <div class="comment-section">
-                <h3>Comment Section</h3>
-                <div class="input-container">
-                    <input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here">
-                    <button onclick="addComment()">Post</button>
-                </div>
-                <div class="comment-list" id="commentList">
-                    <div class="comment">@iPLAYGAMES: I don’t know what is out there</div>
-                    <div class="comment">@milikud: Hope you all make it big</div>
-                    <div class="comment">@edwardpatrick: Laughter is the best medicine...</div>
-                </div>
+          <h4>Leave Comment</h4>
+            <textarea class="comment-box"></textarea>
+            <button class="submit-button">Submit</button>
         </div>
         <div class="box">
             <h3>Suggestions for Future Episodes</h3>
@@ -77,12 +60,18 @@
                 <input type="checkbox" name="trends" value="AI and gaming innovations"> AI and gaming innovations<br>
                 <input type="checkbox" name="trends" value="Esports and competitive gaming"> Esports and competitive gaming<br>
             </form>
+              <h4>Leave Comment</h4>
+            <textarea class="comment-box"></textarea>
+            <button class="submit-button">Submit</button>
         </div>
     </div>
     <div class="social-media">
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-        <a href="#">Twitter</a>
+        <a href="https://www.facebook.com/profile.php?id=61565919802390">Facebook</a>
+        <a href="https://www.instagram.com/realgamersspeak#">Instagram</a>
+        <a href="https://x.com/RealGamersSpeak">Twitter</a>
+        <a href="https://www.youtube.com/channel/UC4U4xfmSs8bKDFizK0B4BwA">YouTube</a>
+        <a href="https://www.twitch.tv/realgamersspeak">Twitch</a>
+        <a href="https://open.spotify.com/show/5YuRFoNdAfYbGDmbVIc2HM#">Spotify</a>
     </div>
     <script>
         let voteCounts = {};
