--- a/Host_Page_Curry.html
+++ b/Host_Page_Curry.html
@@ -47,9 +47,12 @@
         </div>
     </div>
     <div class="social-media">
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-        <a href="#">Twitter</a>
+        <a href="https://www.facebook.com/profile.php?id=61565919802390">Facebook</a>
+        <a href="https://www.instagram.com/realgamersspeak#">Instagram</a>
+        <a href="https://x.com/RealGamersSpeak">Twitter</a>
+        <a href="https://www.youtube.com/channel/UC4U4xfmSs8bKDFizK0B4BwA">YouTube</a>
+        <a href="https://www.twitch.tv/realgamersspeak">Twitch</a>
+        <a href="https://open.spotify.com/show/5YuRFoNdAfYbGDmbVIc2HM#">Spotify</a>
     </div>
 </body>
 </html>
