--- a/Pictures_Curry.html
+++ b/Pictures_Curry.html
@@ -13,7 +13,7 @@
 </header>
 
 <div class="nav">
-        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Episode_Page_Curry.html">Episodes</a>
         <a href="Pictures_Curry.html">Pictures</a>
         <a href="Post_Page_Curry.html">Clips</a>
         <a href="Host_Page_Curry.html">About the Host</a>
