--- a/Poll.html
+++ b/Poll.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">Real Gamers Speak<br>Podcast and Blog</div>
     <div class="nav">
-        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Episode_Page_Curry.html">Episodes</a>
         <a href="Pictures_Curry.html">Pictures</a>
         <a href="Post_Page_Curry.html">Clips</a>
         <a href="Host_Page_Curry.html">About the Host</a>
