--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -10,7 +10,7 @@
         Real Gamers Speak<br>Podcast and Blog
     </header>
     <nav>
-        <a href="Post_Page_Curry.html">Episodes</a>
+        <a href="Episode_Page_Curry.html">Episodes</a>
         <a href="Pictures_Curry.html">Pictures</a>
         <a href="Post_Page_Curry.html">Clips</a>
         <a href="Host_Page_Curry.html">About the Host</a>
