--- a/Poll.html
+++ b/Poll.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Gamers Speak - Polls</title>
-    <link rel="stylesheet" href="poll2.css">
+    <link rel="stylesheet" href="poll.css">
     <script>
          document.addEventListener("DOMContentLoaded", function () {
             let votedForms = new Set();
