--- a/Poll.html
+++ b/Poll.html
@@ -115,12 +115,12 @@
             <h3>Suggestions for Future Episodes</h3>
             <p>What type of games do you want us to focus on?</p>
             <form data-form-id="poll3">
-                <label></label><input type="checkbox" name="genres" value="RPGs"> RPGs<br>
-                <label></label><input type="checkbox" name="genres" value="FPS"> FPS<br>
-                <label></label><input type="checkbox" name="genres" value="Indie Games"> Indie Games<br>
-                <label></label><input type="checkbox" name="genres" value="Action/Adventure"> Action/Adventure<br>
-                <label></label><input type="checkbox" name="genres" value="Racing"> Racing<br>
-                <label></label><input type="checkbox" name="genres" value="Puzzles/Strategy"> Puzzles/Strategy<br>
+                <label></label><input type="checkbox" name="genres" value="RPGs"> RPGs</label><br>
+                <label></label><input type="checkbox" name="genres" value="FPS"> FPS</label><br>
+                <label></label><input type="checkbox" name="genres" value="Indie Games"> Indie Games</label><br>
+                <label></label><input type="checkbox" name="genres" value="Action/Adventure"> Action/Adventure</label><br>
+                <label></label><input type="checkbox" name="genres" value="Racing"> Racing</label><br>
+                <label></label><input type="checkbox" name="genres" value="Puzzles/Strategy"> Puzzles/Strategy</label><br>
                 <button type="button" class="submit-button">Submit</button>
             </form>
         </div>
