Added break to button

--- a/Poll.html
+++ b/Poll.html
@@ -94,7 +94,7 @@
                 <label><input type="radio" name="goty" value="Yes"> Yes</label><br>
                 <label><input type="radio" name="goty" value="No"> No</label><br>
                 <label><input type="radio" name="goty" value="Indifferent"> Indifferent</label><br>
-                <button type="button" class="submit-button">Submit</button>
+                <br><button type="button" class="submit-button">Submit</button>
             </form>
         </div>
 
@@ -107,7 +107,7 @@
                 <label><input type="radio" name="games" value="Monster Hunter Wilds"> Monster Hunter Wilds</label><br>
                 <label><input type="radio" name="games" value="Assassin's Creed Shadows"> Assassin's Creed Shadows</label><br>
                 <label><input type="radio" name="games" value="Metroid Prime 4"> Metroid Prime 4</label><br>
-                <button type="button" class="submit-button">Submit</button>
+                <br><button type="button" class="submit-button">Submit</button>
             </form>
         </div>
 
@@ -121,7 +121,7 @@
                 <label></label><input type="checkbox" name="genres" value="Action/Adventure"> Action/Adventure</label><br>
                 <label></label><input type="checkbox" name="genres" value="Racing"> Racing</label><br>
                 <label></label><input type="checkbox" name="genres" value="Puzzles/Strategy"> Puzzles/Strategy</label><br>
-                <button type="button" class="submit-button">Submit</button>
+                <br><button type="button" class="submit-button">Submit</button>
             </form>
         </div>
 
