--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
         <div class="logo">
             <img src="Images/logo.png" alt="Real Gamers Speak Logo">
         </div>
+
+        <div class="click-text">Click Here to Enter Site</div>
+
         <div class="video-container" onclick="navigate()">
-            <video id="intro-video" autoplay muted loop>
-                <source src="Starting Soon 1.mp4" type="video/mp4">
-            </video>
-            <div class="click-text">Click Video to Enter Site</div>
+            <iframe width="100%" height="500px" 
+            src="https://www.youtube.com/embed/q5bBmFaDEY0?autoplay=1&loop=1" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+            </iframe>
         </div>
     </div>
-    </div>
+
     <script>
         window.addEventListener('load', function() {
             let video = document.getElementById('intro-video');
-            video.playbackRate = 2.0; // Set speed to 2x
         });
         function navigate() {
             window.location.href = "Welcome_Page_html_Curry.html";
