--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -32,7 +32,7 @@
                     <h1>Reviews</h1><br>
                     <h2 style="text-align: center;">**The Washington Post**</h2>
                     <p style="font-style: italic;">In a crowded arena of gaming podcasts, “Real Gamers Speak” emerges as a refreshing and engaging listen. This podcast, hosted by a trio of passionate gaming enthusiasts, dives deep into the heart of gaming culture, offering listeners an insightful mix of commentary, interviews, and industry news.</p><br>
-                    <br><h2 style="text-align: center;"> <img src="Images/ign.png" alt="IGN Logo" style="width: 25px; height: auto; vertical-align: middle;"> IGN </h2>
+                    <br><h2 style="text-align: center;"> <img src="Images/IGN.png" alt="IGN Logo" style="width: 25px; height: auto; vertical-align: middle;"> IGN </h2>
                     <p style="font-style: italic;">Real Gamers Speak has rapidly emerged as a notable podcast in the gaming community, and it's easy to see why. With a lively mix of humor, insightful commentary, and genuine passion for gaming, this podcast resonates with both casual gamers and hardcore enthusiasts alike.</p><br>
                     <br><h2 style="text-align: center;"> <img src="Images/Podchaser.svg" alt="Podchaser Logo" style="width: 120px; height: auto; vertical-align: middle;"></h2>
                     <p style="font-style: italic;">Rating: ★★★★☆</p>
