--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -83,6 +83,7 @@
         width: "100%",
         height: "500px",
         channel: "realgamersspeak",
+        video: "2383292936",
         parent: ["koolaid711.github.io"] // Replace with your actual domain
     });
 
