still trying video

--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -84,6 +84,7 @@
         height: "500px",
         channel: "realgamersspeak",
         video: "2383292936",
+        collection: "2383292936",
         parent: ["koolaid711.github.io"] // Replace with your actual domain
     });
 
