I think I got it

--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -79,12 +79,10 @@
     </div>
 </body>
 <script type="text/javascript">
-    new Twitch.Embed("twitch-embed", {
+    new Twitch.Player("twitch-embed", {
         width: "100%",
         height: "500px",
-        channel: "realgamersspeak",
         video: "2383292936",
-        collection: "2383292936",
         parent: ["koolaid711.github.io"] // Replace with your actual domain
     });
 
