Changed Header on website

--- a/Poll.html
+++ b/Poll.html
@@ -78,7 +78,12 @@
     </script>
 </head>
 <body>
-    <div class="header">Real Gamers Speak<br>Podcast and Blog</div>
+    <div class="header">
+        <a href="Welcome_Page_html_Curry.html" class="logo-link">
+            <img src="Images/logo.png" alt="Real Gamers Speak Logo" class="logo" />
+        </a>
+        <span class="header-text">Real Gamers Speak<br>Podcast and Blog</span>
+    </div>
     <div class="nav">
         <a href="Episode_Page_Curry.html">Episodes</a>
         <a href="Pictures_Curry.html">Pictures</a>
