--- a/Welcome_Page_html_Curry.html
+++ b/Welcome_Page_html_Curry.html
@@ -11,7 +11,7 @@
     <body>
         <div class="header">
             <a href="Welcome_Page_html_Curry.html" class="logo-link">
-                <img src="Images/logo.png" alt="Real Gamers Speak Logo" class="logo" />
+                <img src="Images/tlogo.png" alt="Real Gamers Speak Logo" class="logo" />
             </a>
             <span class="header-text">Real Gamers Speak<br>Podcast and Blog</span>
         </div>
