--- a/Under_Construction_Page_Curry.html
+++ b/Under_Construction_Page_Curry.html
@@ -9,16 +9,16 @@
     <body>
         <div class="header">
             <a href="Welcome_Page_html_Curry.html" class="logo-link">
-                <img src="Images/tlogo.jpg" alt="Real Gamers Speak Logo" class="logo" />
+                <img src="Images/tlogo.png" alt="Real Gamers Speak Logo" class="logo" />
             </a>
             <span class="header-text">Real Gamers Speak<br>Podcast and Blog</span>
         </div>
         <div class="nav">
-            <a href="Episode_Page_Curry.html">Episodes</a>
-            <a href="Pictures_Curry.html">Pictures</a>
-            <a href="Post_Page_Curry.html">Clips</a>
-            <a href="Host_Page_Curry.html">About the Host</a>
-            <a href="Poll.html">Poll</a>
+            <a href="Episode_Page_Curry.html" class="episode-link"><img src="Images/tvpure.png" alt="tv" class="episode-icon" style="width: 25px; height: auto; vertical-align: middle;"> Episodes</a>
+            <a href="Pictures_Curry.html" class="pic-link"><img src="Images/picpure.png" alt="pic" class="pic-icon" style="width: 25px; height: auto; vertical-align: middle;">Pictures</a>
+            <a href="Post_Page_Curry.html" class="news-link"><img src="Images/newspure.png" alt="news" class="news-icon" style="width: 25px; height: auto; vertical-align: middle;">News & Clips</a>
+            <a href="Host_Page_Curry.html" class="host-link"><img src="Images/hostpure.png" alt="host" class="host-icon" style="width: 25px; height: auto; vertical-align: middle;">About the Host</a>
+            <a href="Poll.html" class="poll-link"><img src="Images/pollpure.png" alt="poll" class="poll-icon" style="width: 25px; height: auto; vertical-align: middle;">Poll</a>
         </div>
         <div class="content">
            
@@ -27,7 +27,7 @@
                 <img src="Images/Under Construction.webp" alt="Under Construction">
             </div>
             </a>
-
+        </div>
 
         <div class="social-media">
         <a href="https://www.facebook.com/profile.php?id=61565919802390">Facebook</a>
