--- a/Poll.html
+++ b/Poll.html
@@ -85,11 +85,11 @@
         <span class="header-text">Real Gamers Speak<br>Podcast and Blog</span>
     </div>
     <div class="nav">
-        <a href="Episode_Page_Curry.html">Episodes</a>
-        <a href="Pictures_Curry.html">Pictures</a>
-        <a href="Post_Page_Curry.html">Clips</a>
-        <a href="Host_Page_Curry.html">About the Host</a>
-        <a href="Poll.html">Poll</a>
+        <a href="Episode_Page_Curry.html" class="episode-link"><img src="Images/tvpure.png" alt="tv" class="episode-icon" style="width: 25px; height: auto; vertical-align: middle;"> Episodes</a>
+        <a href="Pictures_Curry.html" class="pic-link"><img src="Images/picpure.png" alt="pic" class="pic-icon" style="width: 25px; height: auto; vertical-align: middle;">Pictures</a>
+        <a href="Post_Page_Curry.html" class="news-link"><img src="Images/newspure.png" alt="news" class="news-icon" style="width: 25px; height: auto; vertical-align: middle;">News & Clips</a>
+        <a href="Host_Page_Curry.html" class="host-link"><img src="Images/hostpure.png" alt="host" class="host-icon" style="width: 25px; height: auto; vertical-align: middle;">About the Host</a>
+        <a href="Poll.html" class="poll-link"><img src="Images/pollpure.png" alt="poll" class="poll-icon" style="width: 25px; height: auto; vertical-align: middle;">Poll</a>
     </div>
     <div class="container">
         <div class="box">
@@ -131,7 +131,7 @@
         </div>
 
         <div class="comment-section">
-            <h1 style="color:red; text-align:center;">Comment Section</h1>
+            <h1 style="text-align:center;">Comment Section</h1>
             <div class="input-container">
                 <input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here">
                 <button onclick="addComment()">Post</button>
