label in comment

--- a/Poll.html
+++ b/Poll.html
@@ -133,7 +133,7 @@
         <div class="comment-section">
             <h1 style="text-align:center;">Comment Section</h1>
             <div class="input-container">
-                <input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here">
+                <lable><input class="comment-box" type="text" id="commentInput" placeholder="Enter your comment here"></lable>
                 <button onclick="addComment()">Post</button>
             </div>
             <div class="comment-list" id="commentList">
